--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<p>哈囉, 這裡是牛牛!</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/ava.jpg" alt="Avatar">
+					<img src="img/ava.png" alt="Avatar">
 				</div>
 				<div class="unit-80">
 					<h1>我的興趣是<br><span id="typed"></span></h1>					
