--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<style>
 		.intro h1:before {
 			/* Edit this with your name or anything else */
-			content: 'MomoCow';
+			content: 'Momo\nCow';
 		}
 	</style>
 </head>
