--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/custom.min.css" />
     <link rel="shortcut icon" href="img/favicon.png" />
-	<link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
 		.intro h1:before {
-			/* Edit this with your name or anything else */
-			content: 'Momo\nCow';
+			content: 'MomoCow';
 		}
 	</style>
 </head>
@@ -32,8 +31,8 @@
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
-				        <li class="active"><a href="#about">About</a></li>
-				        <li><a href="#experiences">Experiences</a></li>
+				        <li class="active"><a href="#about">關於我</a></li>
+				        <li><a href="#experiences">產銷履歷</a></li>
 				        <li><a href="#achievements">Achievements</a></li>
 				        <li><a href="#skills">Skills</a></li>
 				    </ul>
@@ -51,7 +50,7 @@
 					<img src="img/ava.png" alt="Avatar">
 				</div>
 				<div class="unit-80">
-					<h1>我的興趣是<br><span id="typed"></span></h1>					
+					<h1>每天睜開眼, 期待的事情只有一件<br><span id="typed"></span></h1>					
 				</div>
 				<p>
 					
