--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
 		.intro h1:before {
-			content: 'MomoCow';
+			content: 'M.M.COW';
 		}
 	</style>
 </head>
@@ -32,9 +32,9 @@
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
 				        <li class="active"><a href="#about">關於我</a></li>
-				        <li><a href="#experiences">產銷履歷</a></li>
-				        <li><a href="#achievements">Achievements</a></li>
-				        <li><a href="#skills">Skills</a></li>
+				        <li><a href="#experiences">履歷</a></li>
+						<li><a href="#skills">專長</a></li>
+				        <li><a href="#project">作品</a></li>
 				    </ul>
 				</nav>
 			</header>
@@ -50,7 +50,7 @@
 					<img src="img/ava.png" alt="Avatar">
 				</div>
 				<div class="unit-80">
-					<h1>每天睜開眼, 期待的事情只有一件<br><span id="typed"></span></h1>					
+					<h1>例行公事<br><span id="typed"></span></h1>					
 				</div>
 				<p>
 					
@@ -62,44 +62,16 @@
 	<!-- Work Experience -->
 	<div class="work section second" id="experiences">
 		<div class="container">
-			<h1>Work<br>Experiences</h1>
+			<h1>產銷<br>履歷</h1>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">PT Traveloka Indonesia</a></li>
-				<li>Web Designer</li>
-			</ul>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Wego</a></li>
-				<li>UI/UX Designer</li>
+				<li>2015.9-2017.8預定</li>
+				<li><a href="#">交通大學 網工所</a></li>
+				<li>軟體定義網路</li>
 			</ul>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Garuda Indonesia</a></li>
-				<li>System Designer</li>
-			</ul>
-		</div>
-	</div>
-
-	<!-- Award & Achievements -->
-	<div class="award section second" id="achievements">
-		<div class="container">
-			<h1>Award &amp;<br>Achievements</h1>
-			<ul class="award-list list-flat">
-				<li>January 2014</li>
-				<li>Attained PHP5 certification</li>
-				<li>Hold world/Olympic record</li>
-			</ul>
-			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
-				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
-			</ul>
-			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
+				<li>2011.9-2015.6</li>
+				<li><a href="#">交通大學 電機系</a></li>
+				<li>計算機工程學程</li>
 			</ul>
 		</div>
 	</div>
@@ -107,18 +79,31 @@
 	<!-- Technical Skills -->
 	<div class="skills section second" id="skills">
 		<div class="container">
-			<h1>Technical<br>Skills</h1>
+			<h1>吃草以外の &amp;<br>專長</h1>
 			<ul class="skill-list list-flat">
-				<li>Web Technology</li>
-				<li>HTML / CSS / SASS / PHP / Javascript</li>
+				<li>網頁前後端</li>
+				<li>HTML / CSS / JavaScript / PHP / NodeJS</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Database</li>
-				<li>MySQL / MongoDB / Oracle / Access</li>
+				<li>應用程式</li>
+				<li>C/C++ / Java / Python / NodeJS</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Framework</li>
-				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+				<li>遊戲相關</li>
+				<li>OGame 瀏覽器插件(JavaScript) / Minecraft 模組/插件(Java)</li>
+			</ul>
+		</div>
+	</div>
+	
+	<!-- Award & Achievements -->
+	<div class="award section second" id="project">
+		<div class="container">
+			<h1>GitHub &amp;<br>作品</h1>
+			<ul class="award-list list-flat">
+			</ul>
+			<ul class="award-list list-flat">
+			</ul>
+			<ul class="award-list list-flat">
 			</ul>
 		</div>
 	</div>
@@ -126,7 +111,7 @@
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
-			<h1>fight against the ugliness.</h1>
+			<h1>做不成超人, 至少是條好牛</h1>
 		</div>
 	</div>
 
@@ -156,7 +141,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["吃草!", "吃草!", "還是吃草!!!"],
+		strings: ["吃草!", "吃草!", "還是吃草!!!", "...還有寫程式啦", "...應該吧_(:з」∠)_"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
