import google font for chinese

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="shortcut icon" href="img/favicon.png" />
 	<link href='//fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/earlyaccess/nicomoji.css' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/earlyaccess/notosanstc.css' rel='stylesheet' type='text/css'>
 	<style>
 		.intro h1:before {
 			content: 'M.M.COW';
