--- a/index.html
+++ b/index.html
@@ -17,10 +17,38 @@
 	<link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/earlyaccess/nicomoji.css' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/earlyaccess/notosanstc.css' rel='stylesheet' type='text/css'>
+	<script src="https://use.fontawesome.com/95527ebf75.js"></script>
 	<style>
 		.intro h1:before {
 			content: 'M.M.COW';
 		}
+		
+		/**** Src: https://www.w3schools.com/css/css_tooltip.asp ****/
+		/* Tooltip container */
+		.tooltip {
+			position: relative;
+			display: inline-block;
+			border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+		}
+		/* Tooltip text */
+		.tooltip .tooltiptext {
+			visibility: hidden;
+			width: 120px;
+			background-color: black;
+			color: #fff;
+			text-align: center;
+			padding: 5px 0;
+			border-radius: 6px;
+		 
+			/* Position the tooltip text - see examples below! */
+			position: absolute;
+			z-index: 1;
+		}
+		/* Show the tooltip text when you mouse over the tooltip container */
+		.tooltip:hover .tooltiptext {
+			visibility: visible;
+		}
+		/************************************************************/
 	</style>
 </head>
 <body>
@@ -67,12 +95,12 @@
 			<h1>產銷<br>履歷</h1>
 			<ul class="work-list">
 				<li>2015.9-2017.8預定</li>
-				<li><a href="#">交通大學 網工所</a></li>
+				<li><a href="//www.nctu.edu.tw/">交通大學 網工所</a></li>
 				<li>軟體定義網路</li>
 			</ul>
 			<ul class="work-list">
 				<li>2011.9-2015.6</li>
-				<li><a href="#">交通大學 電機系</a></li>
+				<li><a href="//www.nctu.edu.tw/">交通大學 電機系</a></li>
 				<li>計算機工程學程</li>
 			</ul>
 		</div>
@@ -81,18 +109,20 @@
 	<!-- Technical Skills -->
 	<div class="skills section second" id="skills">
 		<div class="container">
-			<h1>吃草以外の &amp;<br>專長</h1>
+			<h1>程式<br>專長</h1>
 			<ul class="skill-list list-flat">
 				<li>網頁前後端</li>
 				<li>HTML / CSS / JavaScript / PHP / NodeJS</li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>應用程式</li>
-				<li>C/C++ / Java / Python / NodeJS</li>
+				<li>C++ / Java / Python / NodeJS</li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>遊戲相關</li>
-				<li>OGame 瀏覽器插件(JavaScript) / Minecraft 模組/插件(Java)</li>
+				<li>OGame TM腳本(JavaScript)</li>
+				<li>Minecraft 模組/插件(Java)</li>
+				<li><a href="//github.com/momocow/HanaYome">花騎士 瀏覽器(NodeJS)</a></li>
 			</ul>
 		</div>
 	</div>
@@ -102,10 +132,16 @@
 		<div class="container">
 			<h1>GitHub &amp;<br>作品</h1>
 			<ul class="award-list list-flat">
+				<li><a href="//github.com/momocow/HanaYome">HanaYome- 花嫁瀏覽器</a><span class="tooltip fa fa-wrench" aria-hidden="true"><span class="tooltiptext wip">持續更新中</span></span></li>
+				<li>網頁遊戲花騎士專用瀏覽器</li>
 			</ul>
 			<ul class="award-list list-flat">
+				<li><a href="//github.com/momocow/OGInvoice">OGInvoice- OGame出貨單</a><span class="tooltip fa fa-check-square-o" aria-hidden="true"><span class="tooltiptext release"></span></span></li>
+				<li>網遊OGame的輔助插件，主要功能為交易紀錄及統計，油商周交易量統計以及催單</li>
 			</ul>
 			<ul class="award-list list-flat">
+				<li><a href="//github.com/momocow/MoEMail">MoEMail- Minecraft訊息系統</a><span class="tooltip fa fa-wrench" aria-hidden="true"><span class="tooltiptext wip">持續更新中</span></span></li>
+				<li>Minecraft多人伺服器的訊息系統，支援離線訊息，另有網頁版本查看訊息</li>
 			</ul>
 		</div>
 	</div>
@@ -143,7 +179,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["吃草!", "吃草!", "還是吃草!!!", "...還有寫程式啦", "...應該吧_(:з」∠)_"],
+		strings: ["吃草!", "吃草!", "還是吃草!!!", "...還有寫程式", "應該吧", "_(:з」∠)_"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
