--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		.tooltip .tooltiptext {
 			visibility: hidden;
 			width: 120px;
-			background-color: black;
+			background-color: #555;
 			color: #fff;
 			text-align: center;
 			padding: 5px 0;
@@ -46,10 +46,13 @@
 			bottom: 100%;
 			left: 50%; 
 			margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+			opacity: 0;
+			transition: opacity 1s;
 		}
 		/* Show the tooltip text when you mouse over the tooltip container */
 		.tooltip:hover .tooltiptext {
 			visibility: visible;
+			opacity: 1;
 		}
 		/************************************************************/
 	</style>
