--- a/index.html
+++ b/index.html
@@ -17,42 +17,9 @@
 	<link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/earlyaccess/nicomoji.css' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/earlyaccess/notosanstc.css' rel='stylesheet' type='text/css'>
-	<script src="https://use.fontawesome.com/95527ebf75.js"></script>
 	<style>
 		.intro h1:before {
 			content: 'M.M.COW';
-		}
-		
-		/**** Src: https://www.w3schools.com/css/css_tooltip.asp ****/
-		/* Tooltip container */
-		.tooltip {
-			position: relative;
-			display: inline-block;
-			border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-		}
-		/* Tooltip text */
-		.tooltip .tooltiptext {
-			visibility: hidden;
-			width: 120px;
-			background-color: #555;
-			color: #fff;
-			text-align: center;
-			padding: 5px 0;
-			border-radius: 6px;
-		 
-			/* Position the tooltip text - see examples below! */
-			position: absolute;
-			z-index: 1;
-			bottom: 100%;
-			left: 50%; 
-			margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
-			opacity: 0;
-			transition: opacity 1s;
-		}
-		/* Show the tooltip text when you mouse over the tooltip container */
-		.tooltip:hover .tooltiptext {
-			visibility: visible;
-			opacity: 1;
 		}
 		/************************************************************/
 	</style>
@@ -138,15 +105,15 @@
 		<div class="container">
 			<h1>GitHub &amp;<br>作品</h1>
 			<ul class="award-list list-flat">
-				<li><a href="//github.com/momocow/HanaYome">HanaYome- 花嫁瀏覽器</a><span class="tooltip fa fa-wrench" aria-hidden="true"><i class="tooltiptext wip">持續更新</i></span></li>
+				<li><a href="//github.com/momocow/HanaYome">HanaYome- 花嫁瀏覽器</a><i class="fa fa-wrench" aria-hidden="true"></i></li><span class="tooltiptext wip">持續更新</span>
 				<li>網頁遊戲花騎士專用瀏覽器</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li><a href="//github.com/momocow/OGInvoice">OGInvoice- OGame出貨單</a><span class="tooltip fa fa-check-square-o" aria-hidden="true"><i class="tooltiptext release">完成</i></span></li>
+				<li><a href="//github.com/momocow/OGInvoice">OGInvoice- OGame出貨單</a><i class="fa fa-check-square-o" aria-hidden="true"></i></li><span class="tooltiptext release">完成</span>
 				<li>網遊OGame的輔助插件，主要功能為交易紀錄及統計，油商周交易量統計以及催單</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li><a href="//github.com/momocow/MoEMail">MoEMail- Minecraft訊息系統</a><span class="tooltip fa fa-wrench" aria-hidden="true"><i class="tooltiptext wip">持續更新</i></span></li>
+				<li><a href="//github.com/momocow/MoEMail">MoEMail- Minecraft訊息系統</a><i class="fa fa-wrench" aria-hidden="true"></i></li><span class="tooltiptext wip">持續更新</span>
 				<li>Minecraft多人伺服器的訊息系統，支援離線訊息，另有網頁版本查看訊息</li>
 			</ul>
 		</div>
