--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<li>網頁遊戲花騎士專用瀏覽器</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li><i class="fa fa-check-square-o" aria-hidden="true"></i><a href="//github.com/momocow/OGInvoice">OGInvoice- OGame出貨單</a></li><span data-tools="tooltip">完成</span>
+				<li><i class="fa fa-check-square-o" aria-hidden="true"></i><a href="//github.com/momocow/OGInvoice">OGInvoice- OGame出貨單</a></li><span data-tools="tooltip" title="完成">完成</span>
 				<li>網遊OGame的輔助插件，主要功能為交易紀錄及統計，油商周交易量統計以及催單</li>
 			</ul>
 			<ul class="award-list list-flat">
