--- a/index.html
+++ b/index.html
@@ -21,7 +21,48 @@
 		.intro h1:before {
 			content: 'M.M.COW';
 		}
+		i{
+			margin-right: 20px;
+		}
 		
+		.ttp {
+			position: relative;
+			display: inline-block;
+			border-bottom: 1px dotted black;
+		}
+
+		.ttp .ttptext {
+			visibility: hidden;
+			width: 120px;
+			background-color: #555;
+			color: #fff;
+			text-align: center;
+			border-radius: 6px;
+			padding: 5px 0;
+			position: absolute;
+			z-index: 1;
+			bottom: 125%;
+			left: 50%;
+			margin-left: -60px;
+			opacity: 0;
+			transition: opacity 1s;
+		}
+
+		.ttp .ttptext::after {
+			content: "";
+			position: absolute;
+			top: 100%;
+			left: 50%;
+			margin-left: -5px;
+			border-width: 5px;
+			border-style: solid;
+			border-color: #555 transparent transparent transparent;
+		}
+
+		.ttp:hover .ttptext {
+			visibility: visible;
+			opacity: 1;
+		}
 	</style>
 </head>
 <body>
@@ -105,15 +146,15 @@
 		<div class="container">
 			<h1>GitHub &amp;<br>作品</h1>
 			<ul class="award-list list-flat">
-				<li><i class="wip fa fa-wrench" aria-hidden="true" title="持續更新"></i><a href="//github.com/momocow/HanaYome">HanaYome- 花嫁瀏覽器</a></li>
+				<li><i class="ttp ttp-wip fa fa-wrench fa-3x" aria-hidden="true"><span class="ttptext">持續更新</span></i><a href="//github.com/momocow/HanaYome">HanaYome- 花嫁瀏覽器</a></li>
 				<li>網頁遊戲花騎士專用瀏覽器</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li><i class="release fa fa-check-square-o" aria-hidden="true" title="完成開發"></i><a href="//github.com/momocow/OGInvoice">OGInvoice- OGame出貨單</a></li>
+				<li><i class="ttp ttp-release fa fa-check-square-o fa-3x" aria-hidden="true"><span class="ttptext">完成開發</span></i><a href="//github.com/momocow/OGInvoice">OGInvoice- OGame出貨單</a></li>
 				<li>網遊OGame的輔助插件，主要功能為交易紀錄及統計，油商周交易量統計以及催單</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li><i class="wip fa fa-wrench" aria-hidden="true" title="持續更新"></i><a href="//github.com/momocow/MoEMail">MoEMail- Minecraft訊息系統</a></li>
+				<li><i class="ttp ttp-wip fa fa-wrench fa-3x" aria-hidden="true"><span class="ttptext">持續更新</span></i><a href="//github.com/momocow/MoEMail">MoEMail- Minecraft訊息系統</a></li>
 				<li>Minecraft多人伺服器的訊息系統，支援離線訊息，另有網頁版本查看訊息</li>
 			</ul>
 		</div>
@@ -155,9 +196,7 @@
 		strings: ["吃草!", "吃草!", "還是吃草!!!", "...還有寫程式", "應該吧", "_(:з」∠)_"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
-		
-		$(".wip").tooltip({theme: "yellow"});
-		$(".release").tooltip({theme: "green"});
+
     </script>
 </body>
 </html>
