--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 			margin-right: 20px;
 		}
 		
+		/*https://www.w3schools.com/howto/howto_css_tooltip.asp*/
 		.ttp {
 			position: relative;
 			display: inline-block;
 			border-bottom: 1px dotted black;
 		}
-
 		.ttp .ttptext {
 			visibility: hidden;
 			width: 120px;
@@ -45,24 +45,24 @@
 			left: 50%;
 			margin-left: -60px;
 			opacity: 0;
-			transition: opacity 1s;
+			transition: opacity 0.6s;
 		}
-
 		.ttp .ttptext::after {
 			content: "";
 			position: absolute;
-			top: 100%;
-			left: 50%;
+			right: 100%;
+			top: 50%;
 			margin-left: -5px;
 			border-width: 5px;
 			border-style: solid;
 			border-color: #555 transparent transparent transparent;
 		}
-
 		.ttp:hover .ttptext {
 			visibility: visible;
 			opacity: 1;
 		}
+		/*******************************************************/
+		
 	</style>
 </head>
 <body>
