--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		i{
 			margin-right: 20px;
 		}
+		.container ul{
+			display: inline-block;
+		}
 		
 		/*https://www.w3schools.com/howto/howto_css_tooltip.asp*/
 		.ttp {
@@ -142,21 +145,27 @@
 	<div class="award section second" id="project">
 		<div class="container">
 			<h1>GitHub &amp;<br>作品</h1>
-			<i class="ttp ttp-wip fa fa-wrench fa-2x" aria-hidden="true"><span class="ttptext">持續更新</span></i>
-			<ul class="award-list list-flat">
-				<li><a href="//github.com/momocow/HanaYome">HanaYome- 花嫁瀏覽器</a></li>
-				<li>網頁遊戲花騎士專用瀏覽器</li>
-			</ul>
-			<i class="ttp ttp-release fa fa-check-square-o fa-2x" aria-hidden="true"><span class="ttptext">完成開發</span></i>
-			<ul class="award-list list-flat">
-				<li><a href="//github.com/momocow/OGInvoice">OGInvoice- OGame出貨單</a></li>
-				<li>網遊OGame的輔助插件，主要功能為交易紀錄及統計，油商周交易量統計以及催單</li>
-			</ul>
-			<i class="ttp ttp-wip fa fa-wrench fa-2x" aria-hidden="true"><span class="ttptext">持續更新</span></i>
-			<ul class="award-list list-flat">
-				<li><a href="//github.com/momocow/MoEMail">MoEMail- Minecraft訊息系統</a></li>
-				<li>Minecraft多人伺服器的訊息系統，支援離線訊息，另有網頁版本查看訊息</li>
-			</ul>
+			<div>
+				<i class="ttp ttp-wip fa fa-wrench fa-2x" aria-hidden="true"><span class="ttptext">持續更新</span></i>
+				<ul class="award-list list-flat">
+					<li><a href="//github.com/momocow/HanaYome">HanaYome- 花嫁瀏覽器</a></li>
+					<li>網頁遊戲花騎士專用瀏覽器</li>
+				</ul>
+			</div>
+			<div>
+				<i class="ttp ttp-release fa fa-check-square-o fa-2x" aria-hidden="true"><span class="ttptext">完成開發</span></i>
+				<ul class="award-list list-flat">
+					<li><a href="//github.com/momocow/OGInvoice">OGInvoice- OGame出貨單</a></li>
+					<li>網遊OGame的輔助插件，主要功能為交易紀錄及統計，油商周交易量統計以及催單</li>
+				</ul>
+			</div>
+			<div>
+				<i class="ttp ttp-wip fa fa-wrench fa-2x" aria-hidden="true"><span class="ttptext">持續更新</span></i>
+				<ul class="award-list list-flat">
+					<li><a href="//github.com/momocow/MoEMail">MoEMail- Minecraft訊息系統</a></li>
+					<li>Minecraft多人伺服器的訊息系統，支援離線訊息，另有網頁版本查看訊息</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
