--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		/*https://www.w3schools.com/howto/howto_css_tooltip.asp*/
 		.ttp {
 			position: relative;
+			top: -8px;
 		}
 		.ttp .ttptext {
 			visibility: hidden;
