all anchors should open in new pages

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		strings: ["吃草!", "吃草!", "還是吃草!!!", "...還有寫程式", "應該吧", "_(:з」∠)_"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
-
+		$("a").attr("target", "_blank");
     </script>
 </body>
 </html>
