remove anchor in skills

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<li>遊戲相關</li>
 				<li>OGame TM腳本(JavaScript)</li>
 				<li>Minecraft 模組/插件(Java)</li>
-				<li><a href="//github.com/momocow/HanaYome">花騎士 瀏覽器(NodeJS)</a></li>
+				<li>花騎士 瀏覽器(NodeJS)</li>
 			</ul>
 		</div>
 	</div>
