--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	<!-- Work Experience -->
 	<div class="work section second" id="experiences">
 		<div class="container">
-			<h1>產銷<br>履歷</h1>
+			<h1>產銷 &amp;<br>履歷</h1>
 			<ul class="work-list">
 				<li>2015.9-2017.8預定</li>
 				<li><a href="//www.nctu.edu.tw/">交通大學 網工所</a></li>
@@ -127,7 +127,7 @@
 	<!-- Technical Skills -->
 	<div class="skills section second" id="skills">
 		<div class="container">
-			<h1>程式<br>專長</h1>
+			<h1>程式 &amp;<br>專長</h1>
 			<ul class="skill-list list-flat">
 				<li>網頁前後端</li>
 				<li>HTML / CSS / JavaScript / PHP / NodeJS</li>
@@ -206,7 +206,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["吃草!", "吃草!", "還是吃草!!!", "...還有寫程式", "應該吧", "_(:з」∠)_"],
+		strings: ["吃草!", "吃草!!", "還是吃草!!!", "...還有寫程式", "應該吧", "_(:з」∠)_"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
 		$("a").attr("target", "_blank");
