--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link href='//fonts.googleapis.com/earlyaccess/notosanstc.css' rel='stylesheet' type='text/css'>
 	<style>
 		.intro h1:before {
-			content: 'M.M.COW';
+			content: 'COW';
 		}
 		i{
 			margin-right: 20px;
@@ -112,7 +112,11 @@
 		<div class="container">
 			<h1>產銷 &amp;<br>履歷</h1>
 			<ul class="work-list">
-				<li>2015.9-2017.8預定</li>
+				<li>2017.9-</li>
+				<li>研替@<a href='https://www.qnap.com/zh-tw/'>QNAP</a></li>
+			</ul>
+			<ul class="work-list">
+				<li>2015.9-2017.9</li>
 				<li><a href="//www.nctu.edu.tw/">交通大學 網工所</a></li>
 				<li>軟體定義網路</li>
 			</ul>
