--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 			<h1>產銷 &amp;<br>履歷</h1>
 			<ul class="work-list">
 				<li>2017.9-</li>
-				<li>研替@<a href='https://www.qnap.com/zh-tw/'>QNAP</a></li>
+				<li><a href='https://www.qnap.com/zh-tw/'>前端技術開發工程師@QNAP</a></li>
+				<li>研發替代役</li>
 			</ul>
 			<ul class="work-list">
 				<li>2015.9-2017.9</li>
