Update profile and add a buy-me-a-coffee button.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<link href='//fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/earlyaccess/nicomoji.css' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/earlyaccess/notosanstc.css' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/earlyaccess/notosanstc.css' rel='stylesheet' type='text/css'>
+  <link href="//fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
 	<style>
 		.intro h1:before {
 			content: 'COW';
@@ -29,7 +30,11 @@
 		}
 		#project ul{
 			display: inline-block;
-		}
+    }
+    
+    .navbar li.nav-right {
+      float: right;
+    }
 		
 		/*https://www.w3schools.com/howto/howto_css_tooltip.asp*/
 		.ttp {
@@ -67,7 +72,9 @@
 		}
 		/*******************************************************/
 		
-	</style>
+    /* @see https://www.buymeacoffee.com */
+    .bmc-button img{width: 27px !important;margin-bottom: 1px !important;box-shadow: none !important;border: none !important;vertical-align: middle !important;}.bmc-button{line-height: 36px !important;height:37px !important;text-decoration: none !important;display:inline-flex !important;color:#000000 !important;background-color:#FFDD00 !important;border-radius: 3px !important;border: 1px solid transparent !important;padding: 1px 9px !important;font-size: 23px !important;letter-spacing:0.6px !important;;box-shadow: 0px 1px 2px rgba(190, 190, 190, 0.5) !important;-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;margin: 0 auto !important;font-family:'Cookie', cursive !important;-webkit-box-sizing: border-box !important;box-sizing: border-box !important;-o-transition: 0.3s all linear !important;-webkit-transition: 0.3s all linear !important;-moz-transition: 0.3s all linear !important;-ms-transition: 0.3s all linear !important;transition: 0.3s all linear !important;}.bmc-button:hover, .bmc-button:active, .bmc-button:focus {-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;text-decoration: none !important;box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;opacity: 0.85 !important;color:#000000 !important;}
+  </style>
 </head>
 <body>
 	<!-- Navigation -->
@@ -81,8 +88,9 @@
 				    <ul>
 				        <li class="active"><a href="#about">關於我</a></li>
 				        <li><a href="#experiences">履歷</a></li>
-						<li><a href="#skills">專長</a></li>
+						    <li><a href="#skills">專長</a></li>
 				        <li><a href="#project">作品</a></li>
+				        <li class="nav-right"><a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/momocow"><img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" alt="Buy MomoCow a coffee"><span style="margin-left:5px;cursor:pointer;">Buy MomoCow a coffee</span></a></li>
 				    </ul>
 				</nav>
 			</header>
@@ -112,7 +120,7 @@
 		<div class="container">
 			<h1>產銷 &amp;<br>履歷</h1>
 			<ul class="work-list">
-				<li>2017.12預定-</li>
+				<li>2017.12-</li>
 				<li><a href='https://www.qnap.com/zh-tw/'>QNAP- 威聯通科技</a></li>
 				<li>(研替) 前端技術開發工程師</li>
 			</ul>
